Add rlibc, static_assertions deps, and Xargo.toml
- Xargo.toml for the "alloc" dependency
- rlibc fixes some linking errors
- static_assertions let me assert assumptions at compile-time

Signed-off-by: Alek Ratzloff <alekratz@gmail.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,8 +7,10 @@ authors = ["Alek Ratzloff <alekratz@gmail.com>"]
 crate-type = ["staticlib"]
 
 [dependencies]
+rlibc = "1.0"
 volatile = "*"
 spin = "*"
 multiboot2 = "*"
 bitflags = "1"
 x86_64 = "0.1.2"
+static_assertions = "0.2.5"
