--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,8 @@ multiboot2 = "*"
 bitflags = "1"
 x86_64 = "0.1.2"
 static_assertions = "0.2.5"
+bit_field = "0.9.0"
+
+[dependencies.lazy_static]
+version = "1"
+features = ["spin_no_std"]
